--- a/zines.html
+++ b/zines.html
@@ -125,7 +125,7 @@ padding:4px;
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 <header class="major"><h2>Zines are ordered from newest to oldest. Copy links lead directly to the zine of your choice. All zines are <u>free</u> and <u>distributable</u>, and you can let us know where they've been on our social media! Thank you for visiting 🪐</h2></header>
 
-<a id="hrc"><section>
+<a id="women_birds_art_politics"><section>
 	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
 	">
 	<header class="major">   
@@ -145,6 +145,133 @@ outline: none;
 		</style>
 	
 	
+<h2 class="dog">Women, Birds: Art, Politics <a href="https://gliese.arceus.day/zines.html#women_birds_art_politics"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#women_birds_art_politics')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores women artists who use bird symbolism or inspiration in their political work. Click <strong><a href="
+				https://www.canva.com/design/DAGhFWlw0_I/G577m4L71--ky1I19S0mTQ/view?utm_content=DAGhFWlw0_I&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he3d4e9c973">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/gLPwb1fY/Untitled-Artwork-2.png"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">February 2025 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+			</ul>
+
+		</div>
+
+<br>
+</section> </a>
+
+<a id="history_of_zines"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">The History of Zines <a href="https://gliese.arceus.day/zines.html#history_of_zines"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#history_of_zines')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine looks at the origins of zine culture. Click <strong><a href="
+				https://www.canva.com/design/DAGhFfkk5_U/QQxyOO8TGDhoAvvx2lzbBg/view?utm_content=DAGhFfkk5_U&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hd2be73c2ee">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/4gpfnx18/IMG-3829.png"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">February 2025 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Yaya Lan</a></li>
+			</ul>
+		</div>
+
+<br>
+</section> </a>
+
+</section> </a>
+
+<a id="ukrainian_fashion"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">Ukrainian Fashion <a href="https://gliese.arceus.day/zines.html#ukrainian_fashion"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#ukrainian_fashion')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores Ukrainian traditional fashion. Click <strong><a href="
+				https://www.canva.com/design/DAGhFSeiI7E/W8FmKmWO5pXprHMnLT7IIw/view?utm_content=DAGhFSeiI7E&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h75dc92e9fc">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/S7wGdjN2/ABD6-CAF3-8-C5-C-4792-BB20-BD570-C958-B19.png"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">February 2025 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Gray Czarnecki & Tara Chun</a></li>
+			</ul>
+		</div>
+
+<br>
+</section> </a>
+<a id="hrc"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>	
+	
 <h2 class="dog">Hi-Red Center: Performance Art in 1960s Japan <a href="https://gliese.arceus.day/zines.html#hrc"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#hrc')" style="display:inline-block;"></i></a>		
 <a href="#">
 <i class="fa fa-tumblr" style="display:inline-block;"></i>
@@ -159,8 +286,10 @@ outline: none;
 		<div class="col-6 col-12-small">
 			<p align="center"><img width=70% height=70% src="https://i.imghippo.com/files/GiI6365NR.png
 				"></p>	</div>
-		<p class="button primary">January 2025 issue</p>
-
+				<ul class="actions">
+					<li><a href="#" style="margin:10px;"class="button primary">January 2025 issue</a></li>
+					<li><a style="margin:10px;"href="#" class="button">Zine: Tara Chun and Michaela Frey</a></li>
+				</ul>
 		</div>
 
 <br>
@@ -204,8 +333,10 @@ outline: none;
 		</div>
 		<div class="col-6 col-12-small">
 			<p align="center"><img width=70% height=70% src="https://i.imghippo.com/files/GWp7201eX.png"></p>	</div>
-		<p class="button primary">January 2025 issue</p>
-
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">January 2025 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Gray Czarnecki</a></li>
+			</ul>
 		</div>
 
 <br>
@@ -251,8 +382,10 @@ outline: none;
 											</div>
 											<div class="col-6 col-12-small">
 												<p align="center"><img width=70% height=70% src="https://i.ibb.co/RyPhS6L/IMG-3631.png"></p>	</div>
-											<p class="button primary">December 2024 issue</p>
-
+												<ul class="actions">
+													<li><a href="#" style="margin:10px;"class="button primary">December 2024 issue</a></li>
+													<li><a style="margin:10px;"href="#" class="button">Zine: Yaya Lan</a></li>
+												</ul>
 											</div>
 
 	<br>
@@ -306,8 +439,10 @@ outline: none;
 											</div>
 											<div class="col-6 col-12-small">
 												<p align="center"><img width=70% height=70% src="https://i.ibb.co/cKn5msv/IMG-0175.jpg"></p>										</div>
-												<p class="button primary">December 2024 issue</p>
-
+												<ul class="actions">
+													<li><a href="#" style="margin:10px;"class="button primary">December 2024 issue</a></li>
+													<li><a style="margin:10px;"href="#" class="button">Zine: Tara Chun</a></li>
+												</ul>
 											</div>
 	<br>
 	</section> </a>
@@ -359,8 +494,10 @@ outline: none;
 										</div>
 										<div class="col-6 col-12-small">
 											<p align="center"><img width=70% height=70% src="https://i.ibb.co/YQ30vDQ/IMG-2709.png"></p>										</div>
-											<p class="button primary">December 2024 issue</p>
-
+											<ul class="actions">
+												<li><a href="#" style="margin:10px;"class="button primary">December 2024 issue</a></li>
+												<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+											</ul>
 										</div>
 <br>
 </section> </a>
@@ -422,8 +559,10 @@ outline: none;
 												<p align="center"><img width=70% height=70% src="https://i.ibb.co/yBpF1Vj/IMG-0062.png 
 	
 													"></p>										</div>
-													<p class="button primary">November 2024 issue</p>
-
+													<ul class="actions">
+														<li><a href="#" style="margin:10px;"class="button primary">November 2024 issue</a></li>
+														<li><a style="margin:10px;"href="#" class="button">Zine: Gray Czarnecki</a></li>
+													</ul>
 											</div>
 	<br>
 	</section> </a>
@@ -487,8 +626,10 @@ outline: none;
 			<div class="col-6 col-12-small">
 				<p align="center"><img width=70% height=70% src="https://i.ibb.co/zP9z8pr/IMG-0160.png
 					"></p>										</div>
-					<p class="button primary">November 2024 issue</p>
-
+					<ul class="actions">
+						<li><a href="#" style="margin:10px;"class="button primary">November 2024 issue</a></li>
+						<li><a style="margin:10px;"href="#" class="button">Zine: Tara Chun</a></li>
+					</ul>
 			</div>
 <br>
 	</section> </a>
@@ -549,8 +690,10 @@ outline: none;
 		</div>
 		<div class="col-6 col-12-small">
 			<p align="center"><img width=70% height=70% src="https://i.ibb.co/CH8QzYC/IMG-2669.png"></p>										</div>
-			<p class="button primary">November 2024 issue</p>
-
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">November 2024 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+			</ul>
 		</div>
 <br>
 </section> </a>
@@ -614,8 +757,10 @@ outline: none;
 		</div>
 		<div class="col-6 col-12-small">
 			<p align="center"><img width=70% height=70% src="https://i.ibb.co/XSJZfRD/Untitled-Artwork-5.png"></p>										</div>
-			<p class="button primary">January 2024 issue</p>
-
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">January 2024 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+			</ul>
 		</div>
 <br>
 </section> </a>
@@ -674,8 +819,10 @@ outline: none;
 		</div>
 		<div class="col-6 col-12-small">
 			<p align="center"><img width=70% height=70% src="images/Untitled_Artwork.jpg"></p>										</div>
-			<p class="button primary">November 2023 issue</p>
-
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">November 2023 issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+			</ul>
 		</div>
 <br>
 </section> </a>
@@ -746,8 +893,10 @@ outline: none;
 										</div>
 										<div class="col-6 col-12-small">
 											<p align="center"><img width=70% height=70% src="https://i.ibb.co/qY3xPmG/zine.png"></p>										</div>
-											<p class="button primary">September 2023 issue</p>
-
+											<ul class="actions">
+												<li><a href="#" style="margin:10px;"class="button primary">September 2023 issue</a></li>
+												<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Ye-Hyang Frey</a></li>
+											</ul>
 										</div>
 <br>
 </section> </a>
