--- a/zines.html
+++ b/zines.html
@@ -124,6 +124,49 @@ padding:4px;
 
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 <header class="major"><h2>Zines are ordered from newest to oldest. Copy links lead directly to the zine of your choice. All zines are <u>free</u> and <u>distributable</u>, and you can let us know where they've been on our social media! Thank you for visiting 🪐</h2></header>
+<a id="tatreez"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">Tatreez: Embroidery and Resistance in Palestine <a href="https://gliese.arceus.day/zines.html#tatreez"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#tatreez')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores traditional Palestinian embroidery and its vital role in the visual language of Palestinian identity. Click <strong><a href="
+				https://www.canva.com/design/DAGoe0SB-ZY/MM_e1dR0VsiY-SWhUZWZqw/view?utm_content=DAGoe0SB-ZY&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h1229e4a063">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/3yMdqHmT/IMG-3938.png"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">May 2025 Issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Yaya Lan</a></li>
+			</ul>
+
+		</div>
+
+<br>
+</section> </a>
+
 
 <a id="women_birds_art_politics"><section>
 	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
