--- a/staff.html
+++ b/staff.html
@@ -58,7 +58,7 @@
                                     founder + co-president + web dev + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-                                    hi! i'm a junior at langley high school. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
+                                    hi! i'm a senior at langley high school and incoming freshman and harvard college. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
           
                                     </em> by tim harper.</a> here is my <a href="https://micha.arceus.day">website!</a>                        </p>
                                 </div>
@@ -75,11 +75,30 @@
                                   <p class="text-blk position">
                                     co-president + librarian + columnist                        </p>
                                   <p class="text-blk testimonial">
-                                    hi, i’m amenah! i’m a junior at langley. i enjoy writing and i’m a huge history nerd. i’m currently reading <i> <a href="https://www.goodreads.com/book/show/404273.Blackshirts_and_Reds
+                                    hi, i’m amenah! i’m a senior at langley. i enjoy writing and i’m a huge history nerd. i’m currently reading <i> <a href="https://www.goodreads.com/book/show/404273.Blackshirts_and_Reds
                                       ">blackshirts and reds</a> </i> by michael parenti.                                  </p>
                                 </div>
                               </div>
                             </div>
+                                                        <div class="swiper-slide">
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="images/yaya.png" width=230px >
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+                                    yaya lan
+                                  </p>
+                                  <p class="text-blk position">
+                                    cofounder + organizer
+                                  </p>
+                                  <p class="text-blk testimonial">
+                                    hello, i'm a senior at mclean high school! i enjoy drawing, writing, and maximalist web design. also a huge fan of tiramisu, hong kong films, and rhythm games
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
@@ -91,29 +110,12 @@
                                   <p class="text-blk position">
           chief designer + zinemaker                    </p>
                                   <p class="text-blk testimonial">
-                                    hi i'm  a junior attending langley high school! i'm an artist, cellist and partial guitarist! i occasionally enjoy coding a roblox game and like listening to 50s music.
+                                    hi i'm  a senior attending langley high school! i'm an artist, cellist and partial guitarist! i occasionally enjoy coding a roblox game and like listening to 50s music.
                                   </p>
                                 </div>
                               </div>
                             </div>
-                            <div class="swiper-slide">
-                              <div class="card">
-                                <div class="img-wrapper">
-                                  <img src="images/yaya.png" width=230px >
-                                </div>
-                                <div class="card-content">
-                                  <p class="text-blk name">
-                                    yaya lan
-                                  </p>
-                                  <p class="text-blk position">
-                                    organizer + zinemaker
-                                  </p>
-                                  <p class="text-blk testimonial">
-                                    hello, i'm a junior at mclean high school! i enjoy drawing, writing, and maximalist web design. also a huge fan of tiramisu, hong kong films, and rhythm games
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
+                            
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
