--- a/staff.html
+++ b/staff.html
@@ -58,7 +58,7 @@
                                     founder + co-president + web dev + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-                                    hi! i'm a senior at langley high school and incoming freshman and harvard college. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
+                                    hi! i'm a senior at langley high school and incoming freshman at harvard college. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
           
                                     </em> by tim harper.</a> here is my <a href="https://micha.arceus.day">website!</a>                        </p>
                                 </div>
@@ -80,25 +80,6 @@
                                 </div>
                               </div>
                             </div>
-                                                        <div class="swiper-slide">
-                              <div class="card">
-                                <div class="img-wrapper">
-                                  <img src="images/yaya.png" width=230px >
-                                </div>
-                                <div class="card-content">
-                                  <p class="text-blk name">
-                                    yaya lan
-                                  </p>
-                                  <p class="text-blk position">
-                                    cofounder + organizer
-                                  </p>
-                                  <p class="text-blk testimonial">
-                                    hello, i'm a senior at mclean high school! i enjoy drawing, writing, and maximalist web design. also a huge fan of tiramisu, hong kong films, and rhythm games
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-
                             <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
@@ -143,6 +124,26 @@
                   </div>                  
 						</div>
 					</div>
+                                                                  <div class="swiper-slide">
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="images/yaya.png" width=230px >
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+                                    yaya lan
+                                  </p>
+                                  <p class="text-blk position">
+                                    cofounder + organizer
+                                  </p>
+                                  <p class="text-blk testimonial">
+                                    hello, i'm a senior at mclean high school! i enjoy drawing, writing, and maximalist web design. also a huge fan of tiramisu, hong kong films, and rhythm games
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
+
 
 				<!-- Sidebar -->
                 <div id="sidebar" style="font-family: Inconsolata">
