--- a/staff.html
+++ b/staff.html
@@ -142,6 +142,40 @@
                                 </div>
                               </div>
                             </div>
+                                                                  <div class="swiper-slide">
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="#" width=230px >
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+                                    yann lam
+                                  </p>
+                                  <p class="text-blk position">
+                                    zinemaker
+                                  </p>
+                                  <p class="text-blk testimonial">
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="#" width=230px >
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+                                    charlotte gould
+                                  </p>
+                                  <p class="text-blk position">
+                                    zinemaker
+                                  </p>
+                                  <p class="text-blk testimonial">
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
 
 
 
