--- a/zines.html
+++ b/zines.html
@@ -124,6 +124,139 @@ padding:4px;
 
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 <header class="major"><h2>Zines are ordered from newest to oldest. Copy links lead directly to the zine of your choice. All zines are <u>free</u> and <u>distributable</u>, and you can let us know where they've been on our social media! Thank you for visiting 🪐</h2></header>
+
+<a id="adinkra"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">Adinkra Symbols: From the Akan people of Ghana <a href="https://gliese.arceus.day/zines.html#adinkra"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#adinkra')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores the history and meanings of Adinkra symbols and their significance to the Akan people of Ghana. Click <strong><a href="
+				#">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/q84zz6p/Adinkra-zine-gray-copy.jpg"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">Feb 2026 Issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Yann Lam</a></li>
+			</ul>
+
+		</div>
+
+<br>
+</section> </a>
+
+
+<a id="medu"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">The Medu Art Ensemble: Decolonial Work Across Africa <a href="https://gliese.arceus.day/zines.html#medu"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#medu')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores the history of the Medu Art Ensemble, a decolonial collective of artists based in Botswana in the 1980s. Click <strong><a href="
+				#">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/d0PRmHQs/IMG-1599.jpg"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">Feb 2026 Issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Michaela Frey</a></li>
+			</ul>
+
+		</div>
+
+<br>
+</section> </a>
+
+<a id="venezuela"><section>
+	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+	">
+	<header class="major">   
+		<style>
+			.dog{
+			transition: 0.2s;
+			}
+			.cat{
+			transition: 0.2s;
+
+			}
+
+			#myInput{position:absolute;left:-10000px}
+*:focus {
+outline: none;
+}
+		</style>
+	
+	
+<h2 class="dog">Venezuelan Indigenous Art<a href="https://gliese.arceus.day/zines.html#venezuela"><i class="fa-solid fa-copy" onclick="CopyMe('https://gliese.arceus.day/zines.html#venezuela')" style="display:inline-block;"></i></a>		
+<a href="#">
+<i class="fa fa-tumblr" style="display:inline-block;"></i>
+</a>
+</h2>
+	</header>
+
+		<div class="col-6 col-12-small">
+			<p class="cat">This zine explores a variety of Indigenous Venezuelan artists and technique. Click <strong><a href="
+				#">HERE</a></strong> for the online booklet!</p>
+		</div>
+		<div class="col-6 col-12-small">
+			<p align="center"><img width=70% height=70% src="https://i.ibb.co/1j6vPp2/IMG-4047.webp"></p>	</div>
+			<ul class="actions">
+				<li><a href="#" style="margin:10px;"class="button primary">Feb 2026 Issue</a></li>
+				<li><a style="margin:10px;"href="#" class="button">Zine: Tara Chun</a></li>
+			</ul>
+
+		</div>
+
+<br>
+</section> </a>
+
+
+
 <a id="tatreez"><section>
 	<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
 	">
