--- a/staff.html
+++ b/staff.html
@@ -58,9 +58,9 @@
                                     founder + co-president + web dev + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
-                                    hi! i'm a senior at langley high school and incoming freshman at harvard college. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
+                                    hi! i'm a senior at langley high school and incoming freshman at harvard college. i draw & write and love comics! i am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
           
-                                    </em> by tim harper.</a> here is my <a href="https://micha.arceus.day">website!</a>                        </p>
+                                    </em> by tim harper.</a> here is my <a href="https://roseate.ctrl.site">website!</a>                        </p>
                                 </div>
                               </div>
                             </div>
@@ -111,20 +111,7 @@
                                 </div>
                               </div>
                             </div>
-
-                          </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
-                          <div class="swiper-pagination container-block">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>                  
-						</div>
-					</div>
-                                                                  <div class="swiper-slide">
+                                                                                              <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
                                   <img src="images/yaya.png" width=230px >
@@ -159,6 +146,7 @@
                                 </div>
                               </div>
                             </div>
+                                                                                      <div class="swiper-slide">
                               <div class="card">
                                 <div class="img-wrapper">
                                   <img src="#" width=230px >
@@ -177,6 +165,18 @@
                             </div>
 
 
+                          </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+                          <div class="swiper-pagination container-block">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>                  
+						</div>
+					</div>
 
 
 				<!-- Sidebar -->
