--- a/staff.html
+++ b/staff.html
@@ -52,10 +52,10 @@
                                 </div>
                                 <div class="card-content">
                                   <p class="text-blk name">
-                                    michaela ye-hyang frey
+                                    michaela frey
                                   </p>
                                   <p class="text-blk position">
-                                    founder + co-president + web dev + zinemaker
+                                    founder + co-president + zinemaker
                                   </p>
                                   <p class="text-blk testimonial">
                                     hi! i'm a senior at langley high school and incoming freshman at harvard college. i draw & write and love comics! i am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>underground asia: global revolutionaries and the assault on empire
@@ -163,6 +163,24 @@
                                 </div>
                               </div>
                             </div>
+                                                                                              <div class="swiper-slide">
+                              <div class="card">
+                                <div class="img-wrapper">
+                                  <img src="#" width=230px >
+                                </div>
+                                <div class="card-content">
+                                  <p class="text-blk name">
+                                    alice zhang
+                                  </p>
+                                  <p class="text-blk position">
+                                    zinemaker and designer
+                                  </p>
+                                  <p class="text-blk testimonial">
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
 
 
                           </div>
